added models to mcsa

--- a/mcsa/static/mcsa/main.css
+++ b/mcsa/static/mcsa/main.css
@@ -1,6 +1,6 @@
 body {
-  /*background: #FFA5A7;*/
-  background: #66C2F5;
+  background: #FFA5A7;
+  /*background: #66C2F5;*/
   color: #333333;
   margin-top: 5rem;
 }
