modified README for DELIVERABLE #1

--- a/mcsa/templates/mcsa/base.html
+++ b/mcsa/templates/mcsa/base.html
@@ -54,13 +54,13 @@
                 <!--{% if user.is_authenticated %}-->
                     <div class="list-group">
                         {% if user.is_staff %}
-                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Registration Queue</a>
-                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Course Setup</a>
-                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Instructor Setup</a>
+                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
+                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
+                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
                         {% endif %}
 
-                        <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Generate Schedule</a>
-                        <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Edit/View Schedule(s)</a>
+                        <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
+                        <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
                         <a href="{% url 'profile' %}" class="list-group-item list-group-item-light bg-dark text-light">Profile Settings</a>
 
                     </div>
