created scheduling algorithm, TODO: fix bug where weekend schedules beyond the last day of the month.

--- a/mcsa/templates/mcsa/base.html
+++ b/mcsa/templates/mcsa/base.html
@@ -60,7 +60,7 @@
                         {% endif %}
 
                         <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
-                        <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
+                        <a href="{% url 'selectcal' %}" class="list-group-item list-group-item-light bg-dark text-light">Schedule</a>
                         <a href="{% url 'profile' %}" class="list-group-item list-group-item-light bg-dark text-light">Profile Settings</a>
 
                     </div>
