users active by default, removed placeholders from sidebar

--- a/mcsa/templates/mcsa/base.html
+++ b/mcsa/templates/mcsa/base.html
@@ -53,13 +53,13 @@
                     <p class='text-muted'>You can put any information here you'd like. -->
                 <!--{% if user.is_authenticated %}-->
                     <div class="list-group">
-                        {% if user.is_staff %}
-                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
-                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
-                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
-                        {% endif %}
+{#                        {% if user.is_staff %}#}
+{#                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>#}
+{#                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>#}
+{#                            <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>#}
+{#                        {% endif %}#}
 
-                        <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>
+{#                        <a href="{% url 'index' %}" class="list-group-item list-group-item-light bg-dark text-light">Placeholder</a>#}
                         <a href="{% url 'selectcal' %}" class="list-group-item list-group-item-light bg-dark text-light">Schedule</a>
                         <a href="{% url 'profile' %}" class="list-group-item list-group-item-light bg-dark text-light">Profile Settings</a>
 
